--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script
-      type="text/javascript"
-      src="https://public.tableau.com/javascripts/api/tableau-2.min.js"
-    ></script>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+      integrity="sha384-XodZB9A1h7CI2Zq0iq8Qja2fq30HjWmlg/WYII7KIj8vagQMRGz4mBEI63Oj9lXJ"
+      crossorigin=""
+    />
 
     <title>React App</title>
   </head>
